added beginning of datastore

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "karma start build/karma.conf.js --single-run"
   },
   "dependencies": {
-    "vue": "^1.0.0"
+    "es6-promise": "^3.0.2",
+    "firebase": "^2.3.2",
+    "vue": "^1.0.0",
+    "vue-router": "^0.7.5"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
